<resources>
    <string name="app_name">ParisCulture</string>
    <string name="error_message">Désolé, il y a eu une erreur</string>
    <string name="unknown">Inconnu</string>
    <string name="no_results_message">Zéro résultats</string>
    <string name="appwidget_text">Events</string>
    <string name="action_events_all">Tous</string>
    <string name="action_events_favorite">Favoris</string>
    <string name="action_events_date">Date</string>
    <string name="events_today">Paris Culture - aujourd\'hui</string>

    <string name="address">Adresse</string>
    <string name="transportation">Transport</string>
    <string name="description">Description</string>
    <string name="contact">Contact</string>
    <string name="free">gratuit</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="paris_icon_description">Paris by Vonn Weisenberger from the Noun Project</string>
    <string name="action_events_zip_code">Arrondissement</string>
    <string name="dialog_zip_code">Arrondissements</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="action_events_category">Catégorie</string>
    <string name="dialog_category">Catégories</string>
    <string name="event_cover">Event Cover</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="share_icon">Share Icon</string>
    <string name="event_information_background">Event Information Background</string>
    <string name="event_added_favorite">L\'événement a été rajouté aux favoris</string>
    <string name="event_removed_favorite">L\'événement a été supprimé des favoris</string>
    <string name="map">Voir dans la carte</string>
    <string name="more_info">Voir plus</string>
    <string name="has_sync_events">has_sync_events</string>
    <string name="share_message">Je pense que cet événement va vous intérésser: %1$s. Pour en savoir plus: %2$s</string>
</resources>
