<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_events_all"
        android:orderInCategory="1"
        android:title="@string/action_events_all"
        />
    <item
        android:id="@+id/action_events_favorite"
        android:orderInCategory="2"
        android:title="@string/action_events_favorite"
        />
    <item
        android:id="@+id/action_events_date"
        android:orderInCategory="3"
        android:title="@string/action_events_date"
        />
    <item
        android:id="@+id/action_events_zip_code"
        android:orderInCategory="4"
        android:title="@string/action_events_zip_code"
        />
    <item
        android:id="@+id/action_events_category"
        android:orderInCategory="5"
        android:title="@string/action_events_category"
        />
</menu>
