<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EventDetailsFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/event_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_xlarge"
                tools:context=".EventDetailsActivity"
                >
                <ImageView
                    android:id="@+id/event_cover"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/event_cover_height"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/placeholder"
                    android:scaleType="centerCrop"
                    />
                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_small"
                    app:layout_constraintTop_toBottomOf="@+id/event_cover"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/event_favorite"
                    tools:text="Puce Muse présente: Concert Jardinal de l'été lorem ipsum lorem ipsum lorem ipsum"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    />
                <ImageView
                    android:id="@+id/event_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_medium"
                    app:srcCompat="@drawable/ic_favorite"
                    app:layout_constraintTop_toTopOf="@id/event_title"
                    app:layout_constraintBottom_toTopOf="@+id/event_share"
                    app:layout_constraintStart_toEndOf="@id/event_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <ImageView
                    android:id="@+id/event_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    app:srcCompat="@drawable/ic_share"
                    app:layout_constraintTop_toBottomOf="@id/event_favorite"
                    app:layout_constraintStart_toStartOf="@id/event_favorite"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:tint="?colorSecondaryVariant"
                    />
                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintTop_toBottomOf="@id/event_title"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@+id/event_favorite"
                    tools:text="03/10/2020"
                    style="@style/detail_value"
                    />
                <TextView
                    android:id="@+id/event_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="gratuit"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintTop_toBottomOf="@id/event_date"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    style="@style/detail_value"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/event_description_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintTop_toBottomOf="@id/event_price"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_label"
                    />
                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="Lorem Ipsum"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintTop_toBottomOf="@id/event_description_label"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_value"
                    />
                <TextView
                    android:id="@+id/event_address_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintTop_toBottomOf="@id/event_description"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_label"
                    />
                <TextView
                    android:id="@+id/event_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="2 boulevard du palais - 75001"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintTop_toBottomOf="@id/event_address_label"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_value"
                    />
                <TextView
                    android:id="@+id/event_transportation_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/transportation"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintTop_toBottomOf="@id/event_address"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_label"
                    />
                <TextView
                    android:id="@+id/event_transportation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="Ligne 4, station Cit\u00e9, lignes 1, 7, 11 et 14, station Ch\u00e2telet\n21, 24, 27, 38, 58, 81, 85,\nligne B et C, station Saint-Michel"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintTop_toBottomOf="@id/event_transportation_label"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_value"
                    />
                <TextView
                    android:id="@+id/event_contact_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintTop_toBottomOf="@id/event_transportation"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_label"
                    />
                <TextView
                    android:id="@+id/event_contact_name"
                    style="@style/detail_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/event_contact_url"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintTop_toBottomOf="@id/event_contact_label"
                    tools:text="Conciergerie/  Centre des monuments-nationaux"
                    tools:visibility="visible"
                    />
                <TextView
                    android:id="@+id/event_contact_url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="http://www.paris-conciergerie.fr/"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintTop_toBottomOf="@id/event_contact_name"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_value_clickable"
                    />
                <TextView
                    android:id="@+id/event_contact_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="la-conciergerie@monuments-nationaux.fr"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintTop_toBottomOf="@id/event_contact_url"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_value_clickable"
                    />
                <TextView
                    android:id="@+id/event_contact_facebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="https://www.facebook.com/LaConciergerieDeParis/"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintTop_toBottomOf="@id/event_contact_email"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_value_clickable"
                    />
                <TextView
                    android:id="@+id/event_contact_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="0153406080"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintTop_toBottomOf="@id/event_contact_facebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/event_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@id/event_favorite"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/detail_value"
                    android:textStyle="bold"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/error_message"
            android:textSize="@dimen/subtitle_text"
            android:visibility="invisible" />

    </LinearLayout>
</layout>
